Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40783

QNX650 build failure (x86 and arm)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.4.0
    • 5.4.0
    • Core: Threads
    • None
    • Ubuntu 11.04 32bit/64bit
    • 36a30d8e49def2999917bb12489dcbfbbfa99209

      The following compilation error occurs when building with Ubuntu 11.04 and qt5.git -> #5.4

      ...
      ...
      qcc -Vgcc_ntox86 -c -Wc,-include -Wc,.pch/Qt5Core -Wno-psabi -lang-c++ -msse2 -mfpmath=sse -O2 -fvisibility=hidden -fvisibility-inlines-hidden -Wc,-std=gnu++0x -Wall -W -D_REENTRANT -fPIC -shared -DQT_NO_CLIPBOARD -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_EVDEV -DQT_NO_USING_NAMESPACE -DQT_BUILD_CORE_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DPCRE_HAVE_CONFIG_H -DPCRE_DISABLE_JIT -DQT_NO_ICONV -DQT_CORE_LIB -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -I../../mkspecs/qnx-x86-qcc -I. -I../../include -I../../include/QtCore -I../../include/QtCore/5.4.0 -I../../include/QtCore/5.4.0/QtCore -Iglobal -I../3rdparty/pcre -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I../3rdparty/sha3 -I.moc -I/opt/qnx650/target/qnx6/usr/include -I/opt/qnx650/target/qnx6/usr/include/freetype2 -o .obj/qwaitcondition_unix.o thread/qwaitcondition_unix.cpp
      thread/qthreadpool.cpp: In member function 'void QThreadPoolPrivate::reset()':
      thread/qthreadpool.cpp:274: error: using 'typename' outside of template
      cc: /opt/qnx650/host/linux/x86/usr/lib/gcc/i486-pc-nto-qnx6.5.0/4.4.2/cc1plus error 1
      make[3]: *** [.obj/qthreadpool.o] Error 1
      make[3]: *** Waiting for unfinished jobs....
      make[3]: Leaving directory `/work/build/qt5_workdir/w/s/qtbase/src/corelib'
      make[2]: *** [sub-corelib-make_first] Error 2
      make[2]: Leaving directory `/work/build/qt5_workdir/w/s/qtbase/src'
      make[1]: *** [sub-src-make_first] Error 2
      make[1]: Leaving directory `/work/build/qt5_workdir/w/s/qtbase'
      make: *** [module-qtbase-make_first] Error 2

        For Gerrit Dashboard: QTBUG-40783
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            iknd Iikka Eklund
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes